cabal-version       : 3.0

name                : screenshot
version             : 0.0.0.0
build-type          : Simple

category            : Graphics
synopsis            : For when you just want to take the damn screenshot.
description         : Please see the README.

homepage            : https://github.com/mastarija/screenshot#readme
bug-reports         : https://github.com/mastarija/screenshot/issues

author              : Luka Hadžiegrić
copyright           : Copyright (c) 2021 Luka Hadžiegrić
maintainer          : luka@mastarija.com

license             : MIT
license-file        : LICENSE

extra-source-files  : README.md

source-repository head
  type              : git
  location          : https://github.com/mastarija/screenshot

common core
  ghc-options       : -Wall
  build-depends     : base
  default-language  : Haskell2010

library
  import            : core
  hs-source-dirs    : lib
  exposed-modules   : Graphics.Screenshot